# hellspawn

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.bat  build.sh  hellspawn.rc  resources.qrc  run-clang-tidy.sh  vcpkg.json
.github/workflows/: pr-build.yml  release.yml
src/: gitinfo.h.in  main.cpp
src/core/: DatFile.cpp  DatFile.h  ItemsXml.cpp  ItemsXml.h  OtbFile.cpp  OtbFile.h  SpriteData.h  SpriteFile.cpp  SpriteFile.h  ThingData.h
src/editor/: EditorContent.cpp  EditorContent.h  EditorTab.cpp  EditorTab.h  LoadWidget.cpp  LoadWidget.h  MainWindow.cpp  MainWindow.h  SpriteEditor.cpp  SpriteEditor.h  ThingEditor.cpp  ThingEditor.h  ThingIconProvider.cpp  ThingIconProvider.h  ThingPropertyEditor.cpp  ThingPropertyEditor.h
src/util/: BinaryReader.cpp  BinaryReader.h  BinaryWriter.cpp  BinaryWriter.h  Logger.cpp  Logger.h  StringHelper.h  Timing.h
src/widgets/: AnimationPreview.cpp  AnimationPreview.h  SpriteGrid.cpp  SpriteGrid.h  SpritePreview.cpp  SpritePreview.h
